# kickstart

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  COMPONENTS.md  Dockerfile  MCP_SETUP.md  Makefile  README.md  RELEASE.md  kickstart.py  kickstart_implementation_todos.md  kickstart_template_improvement_suggestions.md  mcp.json  pyproject.toml  workspace_projects_pattern_analysis.md  workspace_projects_pragmatic_quality_scores.md  workspace_projects_quality_scores.md  workspace_projects_structure.md
.agents/hooks/: session-start.sh
.claude/: settings.json
.claude/hooks/: session-start.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: auto-tag.yml  ci.yml  release.yml  scheduled-evals.yml
ci/: release_policy.py
docs/: README.md  agent-contributing.md  agent-guide.md  contributing.md  evals.md  human-guide.md  install-binaries.md  release-policy.md  scaffold-contract.md
docs/architecture/: README.md
docs/contracts/: README.md  adoption-tiers.md  backstage-export.md  plan-drift-scope.md  telemetry.md
docs/decisions/: README.md  cli-framework-research.md  docs-ownership-fences.md  headroom-benchmark-learnings.md  kickstart-token-savings-evidence.md  scaffold-metadata-architecture-review.md
docs/operations/: README.md  install-binaries.md
scripts/: bootstrap_eval.py  embed_posthog_token.py  generated_make_test_eval.py  import_hygiene_audit.py  install.sh  run_evals.py  scaffold_matrix_eval.py  template_wiring_audit.py  token_savings_eval.py  type_hygiene_audit.py  verify_embedded_telemetry_artifact.py
scripts/ci/: name-and-smoke-binary.sh  smoke-cloudflare-worker.sh  smoke-install.sh
src/: api.py
src/cli/: dispatch.py  main.py  options.py  prompts.py  telemetry.py
src/generator/: adoption.py  backstage_export.py  base.py  docs_plan.py  file_plan.py  frontend.py  language_setup.py  layouts.py  lib.py  markers.py  monorepo.py  projections.py  scaffold_contract.py  service.py  service_capabilities.py  specs.py  system.py  template_plan.py  template_plans.py
src/generators/: base.py  cli.py  frontend.py  language_strategies.py  lib.py  mixins.py  monorepo.py  service.py  service_original.py  service_refactored.py
src/model/: __init__.py
src/spec/: parser.py
src/stack/: __init__.py  agent_workflows.py  defaults.py  profile.py  registry.py  templates.py  toolchain_versions.py  types.py
src/telemetry/: __init__.py  _build_config.py  config.py  events.py  policy.py  posthog.py  reporter.py  sink.py  state.py
src/utils/: codegen.py  config.py  error_handling.py  errors.py  extension_manager.py  fs.py  github.py  help_generator.py  installer.py  logger.py  readme_generator.py  template_config.py  template_registry.py  types.py  updater.py
test-service/: CMakeLists.txt  Cargo.toml  go.mod
tests/: __init__.py
tools/: README.md
website/: .gitignore  Makefile  README.md  alchemy.run.ts  package.json  tsconfig.json  wrangler.toml
(+423 files in other folders)
