[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "kickstart"
version = "0.3.0"
description = "Project scaffolding CLI"
authors = ["You"]

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.9"
rich = "^13.0"
requests = "^2.31"
toml = "^0.10.2"
cryptography = "^42.0.0"
jinja2 = "^3.1.0"

[tool.poetry.scripts]
kickstart = "src.cli.main:app"

[tool.poetry.group.dev.dependencies]
mypy = "^1.17.1"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "typer.*"
ignore_missing_imports = true
