[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "kickstart"
version = "0.3.0"
description = "Project scaffolding CLI"
authors = ["You"]

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.9"
rich = "^13.0"
requests = "^2.31"
toml = "^0.10.2"

[tool.poetry.scripts]
kickstart = "src.cli.main:app"
