[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "kickstart"
version = "0.4.1"
description = "Project scaffolding CLI"
authors = [{name = "You"}]
requires-python = ">=3.12,<3.15"
dependencies = [
    "typer>=0.25.1,<0.26.0",
    "click>=8.3.3,<9.0.0",
    "rich>=15.0.0,<16.0.0",
    "requests>=2.33.1,<3.0.0",
    "toml>=0.10.2,<0.11.0",
    "cryptography>=47.0.0,<48.0.0",
    "jinja2>=3.1.0,<4.0.0",
]

[project.scripts]
kickstart = "src.cli.main:app"

[tool.poetry]
packages = [{include = "src"}]
include = ["src/templates/**/*"]

[tool.poetry.group.dev.dependencies]
mypy = "^1.20.2"
types-toml = "^0.10.8.20260408"
types-requests = "^2.33.0.20260408"
pytest = "^9.0.3"
ruff = "^0.15.12"
pyinstaller = "^6.20.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "typer.*"
ignore_missing_imports = true
